// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createInitialMerkleTree 1`] = `{}`;

exports[`diffMerkleTrees > diff for initialMerkleTree and mt1 1`] = `
{
  "_id": "Option",
  "_tag": "Some",
  "value": 860934420000,
}
`;

exports[`diffMerkleTrees > diff for mt1 and initialMerkleTree 1`] = `
{
  "_id": "Option",
  "_tag": "Some",
  "value": 860934420000,
}
`;

exports[`diffMerkleTrees > diff for two initial Merkle Trees 1`] = `
{
  "_id": "Option",
  "_tag": "None",
}
`;

exports[`diffMerkleTrees > minute window 1`] = `
{
  "_id": "Option",
  "_tag": "Some",
  "value": 860934420000,
}
`;

exports[`diffMerkleTrees > minute window 2`] = `
{
  "_id": "Option",
  "_tag": "Some",
  "value": 860934420000,
}
`;

exports[`insertIntoMerkleTree > node1TimestampStart 1`] = `
{
  "1": {
    "0": {
      "0": {
        "0": {
          "0": {
            "0": {
              "0": {
                "0": {
                  "0": {
                    "0": {
                      "0": {
                        "0": {
                          "0": {
                            "0": {
                              "0": {
                                "0": {
                                  "hash": -1854333397,
                                },
                                "hash": -1854333397,
                              },
                              "hash": -1854333397,
                            },
                            "hash": -1854333397,
                          },
                          "hash": -1854333397,
                        },
                        "hash": -1854333397,
                      },
                      "hash": -1854333397,
                    },
                    "hash": -1854333397,
                  },
                  "hash": -1854333397,
                },
                "hash": -1854333397,
              },
              "hash": -1854333397,
            },
            "hash": -1854333397,
          },
          "hash": -1854333397,
        },
        "hash": -1854333397,
      },
      "hash": -1854333397,
    },
    "hash": -1854333397,
  },
  "hash": -1854333397,
}
`;

exports[`insertIntoMerkleTree > node1TimestampStart then node2Timestamp2022 1`] = `
{
  "1": {
    "0": {
      "0": {
        "0": {
          "0": {
            "0": {
              "0": {
                "0": {
                  "0": {
                    "0": {
                      "0": {
                        "0": {
                          "0": {
                            "0": {
                              "0": {
                                "0": {
                                  "hash": -1854333397,
                                },
                                "hash": -1854333397,
                              },
                              "hash": -1854333397,
                            },
                            "hash": -1854333397,
                          },
                          "hash": -1854333397,
                        },
                        "hash": -1854333397,
                      },
                      "hash": -1854333397,
                    },
                    "hash": -1854333397,
                  },
                  "hash": -1854333397,
                },
                "hash": -1854333397,
              },
              "hash": -1854333397,
            },
            "hash": -1854333397,
          },
          "hash": -1854333397,
        },
        "hash": -1854333397,
      },
      "hash": -1854333397,
    },
    "hash": -1854333397,
  },
  "2": {
    "2": {
      "2": {
        "0": {
          "2": {
            "2": {
              "1": {
                "2": {
                  "2": {
                    "2": {
                      "0": {
                        "0": {
                          "1": {
                            "1": {
                              "2": {
                                "0": {
                                  "hash": -2002249084,
                                },
                                "hash": -2002249084,
                              },
                              "hash": -2002249084,
                            },
                            "hash": -2002249084,
                          },
                          "hash": -2002249084,
                        },
                        "hash": -2002249084,
                      },
                      "hash": -2002249084,
                    },
                    "hash": -2002249084,
                  },
                  "hash": -2002249084,
                },
                "hash": -2002249084,
              },
              "hash": -2002249084,
            },
            "hash": -2002249084,
          },
          "hash": -2002249084,
        },
        "hash": -2002249084,
      },
      "hash": -2002249084,
    },
    "hash": -2002249084,
  },
  "hash": 433128623,
}
`;

exports[`insertIntoMerkleTree > node2Timestamp2022 1`] = `
{
  "2": {
    "2": {
      "2": {
        "0": {
          "2": {
            "2": {
              "1": {
                "2": {
                  "2": {
                    "2": {
                      "0": {
                        "0": {
                          "1": {
                            "1": {
                              "2": {
                                "0": {
                                  "hash": -2002249084,
                                },
                                "hash": -2002249084,
                              },
                              "hash": -2002249084,
                            },
                            "hash": -2002249084,
                          },
                          "hash": -2002249084,
                        },
                        "hash": -2002249084,
                      },
                      "hash": -2002249084,
                    },
                    "hash": -2002249084,
                  },
                  "hash": -2002249084,
                },
                "hash": -2002249084,
              },
              "hash": -2002249084,
            },
            "hash": -2002249084,
          },
          "hash": -2002249084,
        },
        "hash": -2002249084,
      },
      "hash": -2002249084,
    },
    "hash": -2002249084,
  },
  "hash": -2002249084,
}
`;

exports[`receiveTimestamp > TimestampDuplicateNodeError 1`] = `
{
  "_id": "Either",
  "_tag": "Left",
  "left": {
    "_tag": "TimestampDuplicateNodeError",
    "node": "0000000000000001",
  },
}
`;

exports[`receiveTimestamp > should fail with clock drift 1`] = `
{
  "_id": "Either",
  "_tag": "Left",
  "left": {
    "_tag": "TimestampDriftError",
    "next": 860934720001,
    "now": 860934420000,
  },
}
`;

exports[`receiveTimestamp > should fail with clock drift 2`] = `
{
  "_id": "Either",
  "_tag": "Left",
  "left": {
    "_tag": "TimestampDriftError",
    "next": 860934720001,
    "now": 860934420000,
  },
}
`;

exports[`receiveTimestamp > wall clock is later than both the local and remote timestamps 1`] = `
{
  "counter": 0,
  "millis": 860934420001,
  "node": "0000000000000001",
}
`;

exports[`receiveTimestamp > wall clock is somehow behind > for the same timestamps millis, we take the bigger counter 1`] = `
{
  "counter": 2,
  "millis": 860934420001,
  "node": "0000000000000001",
}
`;

exports[`receiveTimestamp > wall clock is somehow behind > for the same timestamps millis, we take the bigger counter 2`] = `
{
  "counter": 2,
  "millis": 860934420001,
  "node": "0000000000000001",
}
`;

exports[`receiveTimestamp > wall clock is somehow behind > local millis is later than remote 1`] = `
{
  "counter": 1,
  "millis": 860934420002,
  "node": "0000000000000001",
}
`;

exports[`receiveTimestamp > wall clock is somehow behind > remote millis is later than local 1`] = `
{
  "counter": 1,
  "millis": 860934420002,
  "node": "0000000000000001",
}
`;

exports[`sendTimestamp > should fail with clock drift 1`] = `
{
  "_id": "Either",
  "_tag": "Left",
  "left": {
    "_tag": "TimestampDriftError",
    "next": 860934720001,
    "now": 860934420000,
  },
}
`;

exports[`sendTimestamp > should fail with counter overflow 1`] = `
{
  "_id": "Either",
  "_tag": "Left",
  "left": {
    "_tag": "TimestampCounterOverflowError",
  },
}
`;

exports[`sendTimestamp > should send monotonically with a monotonic clock 1`] = `
{
  "counter": 0,
  "millis": 860934420001,
  "node": "0000000000000000",
}
`;

exports[`sendTimestamp > should send monotonically with a regressing clock 1`] = `
{
  "counter": 1,
  "millis": 860934420001,
  "node": "0000000000000000",
}
`;

exports[`sendTimestamp > should send monotonically with a stuttering clock 1`] = `
{
  "counter": 1,
  "millis": 860934420000,
  "node": "0000000000000000",
}
`;
